crates/tracel-mlir-rs/src/dialect/llvm/snapshots/mlir_rs__dialect__llvm__tests__compile_intr_cttz.snap
---
source: crates/mlir-rs/src/dialect/llvm/mod.rs
expression: module.as_operation()
---
module {
  llvm.func @foo(%arg0: i64) -> i64 {
    %0 = "llvm.intr.cttz"(%arg0) <{is_zero_poison = true}> : (i64) -> i64
    llvm.return %0 : i64
  }
}
